# svctl

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  exec.rs  highlighter.rs  lib.rs  main.rs  user.rs  watchtower.rs
cli/templates/: user.install.sh  watchtower.install.sh
cli/templates/watchtower/install/: default.sh
proto/: Cargo.toml  buf.gen.yaml  build.rs
proto/proto/dev/vsx/svctl/v1/: config.proto
proto/src/: config.proto  lib.rs
src/: cli.rs  main.rs
