[package]
name = "svctl-cli"
version.workspace = true
edition.workspace = true

[dependencies]
askama = "0.12.1"
svctl-proto.workspace = true
svctl-template.workspace = true
clap.workspace = true
thiserror.workspace = true
run_script.workspace = true
syntect.workspace = true
lazy_static.workspace = true
# serde_json.workspace = true
